Fix collapsable navbar menu

--- a/public/style.css
+++ b/public/style.css
@@ -125,7 +125,7 @@ h2 {
 
 .proyecto h3 {
   display: inline;
-  font-size: 18px;
+  font-size: 14px;
   margin-left: 20px;
 
 }
